--- a/react-boilerplate/public/template.html
+++ b/react-boilerplate/public/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ja">
   <head>
     <!-- The first thing in any HTML file should be the charset -->
 
