--- a/react-boilerplate/public/template.html
+++ b/react-boilerplate/public/template.html
@@ -14,6 +14,8 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
+
     <title>React Boilerplate</title>
   </head>
 
